--- a/Recipes/Store a recipe/task.html
+++ b/Recipes/Store a recipe/task.html
@@ -2,7 +2,7 @@
 
 <p>In the previous stage, we have improved our service, so it can handle a lot of recipes. But when we close our program, it deletes all recipes. In this stage, you'll implement one of the main features of the service – connect the service to a database and store the recipes there. No more lost recipes!</p>
 
-<p>You will also need a new endpoint that will allow deleting a recipe by the recipe <code class="language-java">id</code>. Make sure that the service accepts only valid recipes – recipes without directions or ingredients are frustrating. We won't change the recipe structure in this stage.</p>
+<p>You will also need a new endpoint that will allow deleting a recipe by the recipe <code class="language-java">uniqueIdentifier</code>. Make sure that the service accepts only valid recipes – recipes without directions or ingredients are frustrating. We won't change the recipe structure in this stage.</p>
 
 <h5>Objectives</h5>
 
@@ -15,15 +15,15 @@
 <p>The service should support the same endpoints as in the previous stage:</p>
 
 <ul>
-	<li><code class="language-java">POST /api/recipe/new</code> receives a recipe as a JSON object and returns a JSON object with one <code class="language-java">id</code> field;</li>
-	<li><code class="language-java">GET /api/recipe/{id}</code> returns a recipe with a specified <code class="language-java">id</code> as a JSON object.</li>
+	<li><code class="language-java">POST /api/recipe/new</code> receives a recipe as a JSON object and returns a JSON object with one <code class="language-java">uniqueIdentifier</code> field;</li>
+	<li><code class="language-java">GET /api/recipe/{uniqueIdentifier}</code> returns a recipe with a specified <code class="language-java">uniqueIdentifier</code> as a JSON object.</li>
 </ul>
 
 <p>To complete the stage you need to add the following functionality:</p>
 
 <ul>
 	<li>Store all recipes permanently in a database: after a server restart, all added recipes should be available to a user;</li>
-	<li>Implement a new <code class="language-java">DELETE /api/recipe/{id}</code> endpoint. It deletes a recipe with a specified <code class="language-java">{id}</code>. The server should respond with the <code class="language-json">204 (No Content)</code> status code. If a recipe with a specified id does not exist, the server should return <code class="language-json">404 (Not found)</code>;</li>
+	<li>Implement a new <code class="language-java">DELETE /api/recipe/{uniqueIdentifier}</code> endpoint. It deletes a recipe with a specified <code class="language-java">{uniqueIdentifier}</code>. The server should respond with the <code class="language-json">204 (No Content)</code> status code. If a recipe with a specified uniqueIdentifier does not exist, the server should return <code class="language-json">404 (Not found)</code>;</li>
 	<li>The service should accept only valid recipes – all fields are obligatory, <code class="language-java">name</code> and <code class="language-java">description</code> shouldn't be blank, and JSON arrays should contain at least one item. If a recipe doesn't meet these requirements, the service should respond with the <code class="language-json">400 (Bad Request)</code> status code.</li>
 </ul>
 
@@ -41,7 +41,7 @@
 <p>Response:</p>
 
 <pre><code class="language-json">{
-   "id": 1
+   "uniqueIdentifier": 1
 }</code></pre>
 
 <p><strong>Example 2: </strong>Response for the<strong> </strong><code class="language-java">GET /api/recipe/1</code> request</p>
