--- a/Topics/Exception handling/Implement DELETE endpoint/task.html
+++ b/Topics/Exception handling/Implement DELETE endpoint/task.html
@@ -3,7 +3,7 @@
 <p>The controller of the program contains <code class="java">Map</code> with users. You need to improve the program and add the following endpoint:</p>
 
 <ul>
-	<li><code class="java">DELETE /users/{id}</code> — deletes a user with a specified <code class="java">id</code> and responds with <code class="java">204 No Content</code>. If a user is not present, the program should respond with <code class="java">404 Not Found</code> status code.</li>
+	<li><code class="java">DELETE /users/{uniqueIdentifier}</code> — deletes a user with a specified <code class="java">uniqueIdentifier</code> and responds with <code class="java">204 No Content</code>. If a user is not present, the program should respond with <code class="java">404 Not Found</code> status code.</li>
 </ul>
 
 <p><strong>Example 1:</strong></p>
