Correct the program

--- a/Topics/Posting and deleting data via REST/Web calculator/task.html
+++ b/Topics/Posting and deleting data via REST/Web calculator/task.html
@@ -1,4 +1,4 @@
-<p><div class="alert alert-warning">This problem is fully supported by version 2021.9 of the EduTools plugin and newer. To avoid possible errors, please make sure that the plugin is updated. Alternatively, you can solve it using the Web version of Hyperskill.</div></p>
+<p><div class="alert alert-warning">This problem is fully supported by version 2021.9 of the EduTools plugin and newer. To avoid possible errors, please make sure that the plugin is updated. Alternatively, you can solve it using the web interface.</div></p>
 
 <p>To consolidate your knowledge of REST API, you need to develop a web calculator with three operations: <strong>addition</strong>, <strong>subtraction</strong> and <strong>multiplication</strong>.</p>
 
