--- a/Topics/Exception handling/Improve the program/task.html
+++ b/Topics/Exception handling/Improve the program/task.html
@@ -1,12 +1,12 @@
-<p><div class="alert alert-warning">This problem is fully supported by version 2021.9 of the EduTools plugin and newer. To avoid possible errors, please make sure that the plugin is updated. Alternatively, you can solve it using the Web version of Hyperskill.</div></p>
+<p><div class="alert alert-warning">This problem is fully supported by version 2021.9 of the EduTools plugin and newer. To avoid possible errors, please make sure that the plugin is updated. Alternatively, you can solve it using the web interface.</div></p>
 
 <p>Currently, the program contains the following endpoint:</p>
 
 <ul>
-	<li><code class="java">GET /items/{uniqueIdentifier}</code> — returns an item with a specified <code class="java">uniqueIdentifier</code> and responds with <code class="java">200 (OK)</code>. If an item is not present, it returns the message "Item wasn't found" and also responds with <code class="java">200 (OK)</code>.</li>
+	<li><code class="java">GET /items/{id}</code> — returns an item with a specified <code class="java">id</code> and responds with <code class="java">200 (OK)</code>. If an item is not present, it returns the message "Item wasn't found" and also responds with <code class="java">200 (OK)</code>.</li>
 </ul>
 
-<p>Your task is to modify the program —  it should respond with <code class="java">404 Not Found</code> status code when an item with a specified <code class="java">uniqueIdentifier</code> is not found.</p>
+<p>Your task is to modify the program —  it should respond with <code class="java">404 Not Found</code> status code when an item with a specified <code class="java">id</code> is not found.</p>
 
 <p>Do not change the content of the <code class="java">Map</code>.</p>
 
