--- a/Topics/Lambda expressions/Creating a closure/task.html
+++ b/Topics/Lambda expressions/Creating a closure/task.html
@@ -3,7 +3,7 @@
  <head></head>
  <body>
   <p>Write a lambda expression that adds <strong>PREFIX </strong>(before) and <strong>SUFFIX </strong>(after) to its single string argument;<strong> PREFIX </strong>and <strong>SUFFIX </strong>are final variables. They are available in the code template.</p> 
-  <p>All whitespaces on both ends of the argument must be removed. Do not trim prefix, suffix and the result string.</p>
+  <p>All whitespaces on both ends of the argument must be removed.</p>
  </body>
 </html><br><br><font color="gray">Memory limit: 256 MB</font><br><font color="gray">Time limit: 8 seconds</font><br><br>
 <b>Caution</b><br><br>
