--- a/Recipes/Sort   update/task.html
+++ b/Recipes/Sort   update/task.html
@@ -165,9 +165,4 @@
    },
 ]</code></pre>
 
-<p><button
-        class="btn-sm btn-outline-secondary"
-        onclick="getElementById('hint-7811').style.display='inline'">
-        Hint
-      </button>
-      <div id="hint-7811" style="display:none;">Search is case-insensitive, the recipes are sorted by date.</div></p>
+<p>Search is case-insensitive, the recipes are sorted by date.</p>
