--- a/Topics/Exception handling/Theory (1)/task.html
+++ b/Topics/Exception handling/Theory (1)/task.html
@@ -7,7 +7,7 @@
   <h5>Controller preparation</h5> 
   <p>Imagine a web app that returns information about a flight by its number. It would look like this in JSON:</p> 
   <pre><code class="language-json">{
-  "from": "Berlin Teggel",
+  "from": "Berlin Tegel",
   "to": "Stuttgart",
   "gate": "D80"
 }</code></pre> 
